[package]
name = "k_clustering"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.1"
rayon = "1.1.0"
num-complex = "0.2.3"
cgmath="0.17.0"