[package]
name = "k_clustering"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rayon = "1.5.1"
num-complex = "0.4.0"
num-traits = "0.2.14"
